--- a/css/main.css
+++ b/css/main.css
@@ -150,6 +150,7 @@ h4 {
     background-repeat: no-repeat;
     position: relative;
     top: 7px;
+    transition: transform 0.3s ease-in-out, background-image 0.6s ease-in-out;
 }
 
 .cursorPointer {
